@@ -10,7 +10,6 @@ import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -56,12 +55,11 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
     public Uni<List<AlbumArticle>> saveAll(Iterable<AlbumArticle> aggregates) {
         return switch (aggregates) {
             case null -> Uni.createFrom().failure(new IllegalArgumentException("Aggregates cannot be null"));
-            default -> {
-                final var unis = StreamSupport.stream(aggregates.spliterator(), false).map(this::save)
-                        .collect(Collectors.toList());
-
-                yield Uni.join().all(unis).andFailFast();
-            }
+            default -> Uni.join()
+                    .all(
+                            StreamSupport.stream(aggregates.spliterator(), false).map(this::save)
+                                    .toList())
+                    .andFailFast();
         };
     }
 
@@ -77,21 +75,21 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
     public Uni<List<AlbumArticle>> findAllById(Iterable<Album.Id> ids) {
         return switch (ids) {
             case null -> Uni.createFrom().item(List.of());
-            default -> {
-                final var unis = StreamSupport.stream(ids.spliterator(), false).map(this::findById)
-                        .collect(Collectors.toList());
-
-                yield Uni.join().all(unis).andFailFast().map(
-                        list -> list.stream().filter(albumArticle -> albumArticle != null)
-                                .collect(Collectors.toList()));
-            }
+            default -> Uni.join()
+                    .all(
+                            StreamSupport.stream(ids.spliterator(), false).map(this::findById)
+                                    .toList())
+                    .andFailFast()
+                    .map(
+                            list -> list.stream().filter(albumArticle -> albumArticle != null)
+                                    .toList());
         };
     }
 
     @Override
     public Uni<List<AlbumArticle>> findAll() {
         return dataSource.listAll()
-                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).collect(Collectors.toList()));
+                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).toList());
     }
 
     @Override
@@ -106,12 +104,11 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
     public Uni<Void> deleteAll(Iterable<AlbumArticle> aggregates) {
         return switch (aggregates) {
             case null -> Uni.createFrom().voidItem();
-            default -> {
-                final var unis = StreamSupport.stream(aggregates.spliterator(), false).map(this::delete)
-                        .collect(Collectors.toList());
-
-                yield Uni.join().all(unis).andFailFast().replaceWithVoid();
-            }
+            default -> Uni.join()
+                    .all(
+                            StreamSupport.stream(aggregates.spliterator(), false).map(this::delete)
+                                    .toList())
+                    .andFailFast().replaceWithVoid();
         };
     }
 
@@ -127,12 +124,11 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
     public Uni<Void> deleteAllById(Iterable<Album.Id> ids) {
         return switch (ids) {
             case null -> Uni.createFrom().voidItem();
-            default -> {
-                final var unis = StreamSupport.stream(ids.spliterator(), false).map(this::deleteById)
-                        .collect(Collectors.toList());
-
-                yield Uni.join().all(unis).andFailFast().replaceWithVoid();
-            }
+            default -> Uni.join()
+                    .all(
+                            StreamSupport.stream(ids.spliterator(), false).map(this::deleteById)
+                                    .toList())
+                    .andFailFast().replaceWithVoid();
         };
     }
 
@@ -164,7 +160,7 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
         return switch (labelTag) {
             case null -> Uni.createFrom().item(List.of());
             default -> dataSource.findByLabelTag(labelTag.name())
-                    .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).collect(Collectors.toList()));
+                    .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).toList());
         };
     }
 
@@ -173,19 +169,19 @@ public class AlbumArticleRepositoryImpl implements AlbumArticleRepository {
         return switch (spaceKeyword) {
             case null -> Uni.createFrom().item(List.of());
             default -> dataSource.findByFirstEventSpaceContaining(spaceKeyword)
-                    .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).collect(Collectors.toList()));
+                    .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).toList());
         };
     }
 
     @Override
     public Uni<List<AlbumArticle>> findWithDistribution() {
         return dataSource.findWithDistribution()
-                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).collect(Collectors.toList()));
+                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).toList());
     }
 
     @Override
     public Uni<List<AlbumArticle>> findWithAcquisitionChannels() {
         return dataSource.findWithAcquisitionChannels()
-                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).collect(Collectors.toList()));
+                .map(entities -> entities.stream().map(AlbumArticleMapper::toDomain).toList());
     }
 }
